# CT_MRI_Demo

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  CT_MRI_Demo.sln  CT_MRI_Demo.vcxproj  CT_MRI_Demo.vcxproj.filters  CT_MRI_Demo_qmlimportscan.vcxproj  CT_MRI_Demo_qmlimportscan.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manageDicom.cpp  manageDicom.h  vtkreslicecursorcallback.cpp  vtkreslicecursorcallback.h
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
.qt/deploy_qml_imports/: CT_MRI_Demo-Debug.cmake
CT_MRI_Demo_autogen/: mocs_compilation_Debug.cpp
CT_MRI_Demo_autogen/include_Debug/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_manageDicom.cpp  moc_manageDicom.cpp.d
enc_temp_folder/691a2c5a7517e126e0e36274c14429/: manageDicom.cpp
